added multiple numbers

--- a/Calculator.html
+++ b/Calculator.html
@@ -51,6 +51,9 @@
             <input style="color: rgba(182, 68, 60, 0.788);" type="button" value="Divide Two Numbers" onclick="showDivideNumberResultOnPage(document.getElementById('number1add').value, document.getElementById('number2add').value)">
             <br>
             <br>
+            <input type="button" value="Add Multiple Numbers" onclick="addMultipleNumbers()">
+            <br>
+            <br>
             <p style="color: rgba(67, 38, 172, 0.938);" id="result"></p>
         </form>
 
